# voxflow

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: build.yml
src/: index.html  settings.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  groq.rs  hotkey.rs  lib.rs  main.rs  paste.rs  tray.rs
src/css/: style.css
src/js/: app.js  settings.js
