[package]
name = "voxflow"
version = "0.5.4"
edition = "2021"

[lib]
name = "voxflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
hound = "3.5"
enigo = { version = "0.2", features = ["serde"] }
arboard = "3"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
